chore: remove commented-out tsconfig references

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,8 @@
     "noEmit": true
   },
   "include": ["vite.config.ts"],
-  "files": [],
   "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    //{ "path": "./tsconfig.app.json" },
+    // { "path": "./tsconfig.node.json" }
   ]
 }
