--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   },
   "include": ["vite.config.ts"],
   "references": [
-    //{ "path": "./tsconfig.app.json" },
-    // { "path": "./tsconfig.node.json" }
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
   ]
 }
