--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,8 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "composite": true,
-    "module": "CommonJS",
-    "noEmit": true
+    "module": "CommonJS"
   },
   "include": ["vite.config.ts"]
 }
